# SKSE64_SkyrimAE_Example_Plugin

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: version.hpp.in
src/: main.cpp  plugin.hpp
